--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
   <section id="welcome-section">
     <h1>Hello world,<br> I am <span>Jonathan Juining</span></h1>
-    <p>Passionate.Reliable.Optimistice (P.R.O)</p><br><br>
+    <p>Passionate. Reliable. Optimistic</p>
+    <p>(P.R.O)</p><br><br>
     <a href="https://drive.google.com/file/d/1wReZLhyCyQ7FJLn630ClIsErF09Y9dH1/view?usp=sharing"><button id="btn">Download Resume</button></a>
   </section>
 
